# aw-watcher-mpd

./: .gitignore  README.org  pyproject.toml
aw_watcher_mpd/: __main__.py  config.py  mpd.py
