[tool.poetry]
name = "aw-watcher-mpd"
version = "0.1.0"
description = "An ActivityWatch watcher for mpd"
authors = ["Kalelzar <natomanofglory@gmail.com>"]

[tool.poetry.scripts]
aw-watcher-mpd = "aw_watcher_mpd:main"

[tool.poetry.dependencies]
python = "^3.7"
python-mpd2 = "*"
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}

[tool.poetry.dev-dependencies]
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
